--- a/style.css
+++ b/style.css
@@ -18,7 +18,8 @@ a:hover{
 .header{
     width: auto;
     text-align: center;
-    padding: 30px;    
+    padding: 30px; 
+    margin-top: 80px;   
 }
 
 .menu{
@@ -105,7 +106,6 @@ a:hover{
 
 footer{
     margin-top: 100px;
-    width: auto;
     text-align: center;
     padding: 50px;
     font-size: 14px;
