--- a/style.css
+++ b/style.css
@@ -25,7 +25,8 @@ a:hover{
 .menu{
     width: auto;
     text-align: center;    
-    font-weight: bold;    
+    font-weight: bold;   
+    font-size: 14px; 
 }
 
 .menu-links{
@@ -51,7 +52,7 @@ a:hover{
 }
 
 .banner img{
-    width: 90%;
+    width: 65%;
 }
 
 .coluna{
@@ -61,14 +62,14 @@ a:hover{
 }
 
 .botao{
-    border: 1px solid #333333;
+    border: 1px solid #e8ff67;
     padding: 20px;
     font-size: 20px;
 }
 
 .cardapio{
     box-sizing: border-box;
-    border-top: 1px dashed #999999;
+    border-top: 1px dashed #73c0ff;
     width: 100%;
     margin: auto;
     max-width: 700px;
@@ -79,7 +80,7 @@ a:hover{
 
 .cardapio-categoria{
     text-align: left;
-    color: #ca3c3f;
+    color: #43aef5;
     font-size: 22px;
     margin-top: 50px;
 }
@@ -87,7 +88,8 @@ a:hover{
 .cardapio-item{
     padding-top: 20px;
     text-align: left; 
-    width: 100%;   
+    width: 100%;  
+    color: #ffa600;
 }
 
 .cardapio-nome{
@@ -98,10 +100,11 @@ a:hover{
 .cardapio-preco{        
     font-size: 18px;    
     float: right;
+    color:#ffa600;
 }
 .cardapio-descricao{
     font-size: 12px;
-    color: #999999;
+    color: #6b6b6b;
 }
 
 footer{
@@ -135,5 +138,9 @@ footer p{
         padding-left: 50px;
         padding-right: 50px;
         text-align: center;
+    }
+
+    .banner .coluna .{
+        font-size: 10px;
     }
 }
