--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ a:hover{
 }
 
 .botao{
-    border: 1px solid #e8ff67;
+    border: 1px solid #41b3ff;
     padding: 20px;
     font-size: 20px;
 }
